samples/_failures_safe/1761147098_26d308_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9884c07.c: In function ‘main’:
./samples/SAFE/__tmp_b9884c07.c:154:31: error: expected ‘)’ at end of input
  154 |     graph_add_edge(&g, b, d, 5
      |                   ~           ^
      |                               )
./samples/SAFE/__tmp_b9884c07.c:154:5: error: expected declaration or statement at end of input
  154 |     graph_add_edge(&g, b, d, 5
      |     ^~~~~~~~~~~~~~
